tests/negative/test_expr_deref_ptr.orb
fnc main () () {
    sym x:i32;
    sym (p:ptr (cast ptr (& x)));
    * p;
};